# emailvalidator

./: .dockerignore  .eslintignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  gen_keys.sh  package.json  pnpm-lock.yaml  start.sh  test.rs  update_front.sh
.github/workflows/: releas-rust.yml  release.yml
check-if-email-exists/: Cargo.toml
check-if-email-exists/src/: lib.rs
check-if-email-exists/src/util/: input_output.rs  roles.json
public/: error.html.hbs  index.html  manifest.json  payment_success.html.hbs
public/assets/locales/: en.json
public/feed/: feed.xml
src/: App.css  App.js  api_key.rs  index.css  index.js  main.rs
src/api/: client.js
src/assets/: device-uuid.min.js
src/components/: App.js  Profile.js  RegisterLogin.js  consent.js  header.js  main.js  status.js
src/components/Footers/: derrivedFooter.js  footer.js
src/components/SwiperPages/: Benefits.js  Info.js  SwiperPage.js  SwiperPages.js  SwiperPaymentPage.js  SwiperPaymentPageMobile.js  VerifyPage.js
src/components/icons/: Mac.js  Win.js  avatar.js  daark.js  empty.js  linux.js  logout.js  minus.js  plus.js  settings.js
src/hooks/: login.js
src/tools/: mod.rs  mutithread_check.rs  responce.rs  sender.rs  stripe.rs  users.rs
